Changelog
=========

The following describes the changes between releases.

0.0.1 — TBD
-----------

• Created types and RDF ingest for institution, protocols, participating sites, and projects
• Created types and RDF ingest for degrees, organs, and people
• Create new types documentation
• CA-1489: Ingest all new items from KSDB


0.0.0 — Unreleased
------------------

• First unreleased release.