@@ -7,11 +7,7 @@
     metal:use-macro='context/main_template/macros/master'>
     <head>
         <title>ParticipatingSite Folder View</title>
-        <metal:block fill-slot='style_slot' tal:define='navroot context/@@plone_portal_state/navigation_root_url'>
-            <link rel='stylesheet' type='text/css'
-                tal:attributes='href string:${navroot}/++resource++jpl.mcl.site.knowledge/custom-mcl.css'
-            />
-        </metal:block>
+        <metal:override fill-slot='top_slot' tal:define='dummy python:request.set("disable_plone.leftcolumn", 1)'/>
     </head>
     <body>
         <metal:content-core fill-slot='content-core'>
@@ -47,9 +43,6 @@
                         <tr>
                             <th i18n:translate='participatingsiteName'>Name</th>
                             <th i18n:translate='participatingsiteDescription'>Description</th>
-                            <th i18n:translate='participatingsitePI'>PI</th>
-                            <th i18n:translate='participatingsiteOrgan'>Organ</th>
-                            <th i18n:translate='participatingsiteInstitution'>Institution</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -62,31 +55,12 @@
                                     </a>
                                 </td>
                                 <td tal:content='participatingsite/description'>
-                                    description
-                                </td>
-                                <td>
-                                    <tal:row repeat='pi participatingsite/pi'>
-                                        <a href='#' tal:content='pi/title'
-                                        tal:attributes='href pi/absolute_url;'>
-                                            PI
-                                        </a>
-                                    </tal:row>
-                                </td>
-                                <td>
-                                    <tal:row repeat='org participatingsite/organ'>
-                                        <a href='#' tal:content='org/title'
-                                        tal:attributes='href org/absolute_url;'>
-                                            Finger
-                                        </a>
-                                    </tal:row>
-                                </td>
-                                <td>
-                                    <tal:row repeat='institution participatingsite/institution'>
-                                        <a href='#' tal:content='institution/title'
-                                        tal:attributes='href institution/absolute_url'>
-                                            Institution
-                                        </a>
-                                    </tal:row>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                 </td>
                             </tr>
                         </tal:repeat>
